--- a/public/view/evaluateNewEvent.html
+++ b/public/view/evaluateNewEvent.html
@@ -41,17 +41,17 @@
                     <i class="fa fa-chart-bar"></i>
                     Evaluate Event
                 </a>
-                <a href="#" class="app-sidebar-link">
+                <a href="../view/finishEvent.html" class="app-sidebar-link only-moderator">
+                    <i class="fa fa-chart-bar"></i>
+                    Finish Event
+                </a>
+                <a href="../view/myEvents.html" class="app-sidebar-link">
                     <i class="fa fa-calendar-days"></i>
                     My Events
                 </a>
                 <a href="../view/myWallet.html" class="app-sidebar-link">
                     <i class="fa fa-wallet"></i>
                     My Wallet
-                </a>
-                <a href="#" class="app-sidebar-link">
-                    <i class="fa fa-chart-bar"></i>
-                    Finish Event
                 </a>
                 <a href="#" class="app-sidebar-link">
                     <i class="fa fa-sign-out-alt"></i>
