--- a/public/view/finishEvent.html
+++ b/public/view/finishEvent.html
@@ -45,7 +45,7 @@
                     <i class="fa fa-chart-bar"></i>
                     Finish Event
                 </a>
-                <a href="#" class="app-sidebar-link">
+                <a href="../view/myEvents.html" class="app-sidebar-link">
                     <i class="fa fa-calendar-days"></i>
                     My Events
                 </a>
