--- a/public/view/myWallet.html
+++ b/public/view/myWallet.html
@@ -14,10 +14,6 @@
             <div class="app-header-left">
                 <span class="app-icon"><img src="../assets/pucbet-logo.png" class="logoPucBet"></span>
             </div>
-            <div class="app-header-center">
-                <input type="text" class="search-input" id="searchBar" placeholder="Pesquisar eventos...">
-                <button class="search-btn"><i class="fa fa-search"></i></button>
-            </div>
             <div class="app-header-right"> 
                 <button type="button" class="fas fa-eye" id="showHideBalance"></button>
                 <div id="balance-container" class="showBalance">
@@ -40,7 +36,7 @@
                     <i class="fa fa-chart-bar"></i>
                     Finish Event
                 </a>
-                <a href="#" class="app-sidebar-link">
+                <a href="../view/myEvents.html" class="app-sidebar-link">
                     <i class="fa fa-calendar-days"></i>
                     My Events
                 </a>
