--- a/public/view/finishEvent.html
+++ b/public/view/finishEvent.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-chart-bar"></i>
                     Evaluate Event
                 </a>
-                <a href="../view/finishEvent.html" class="app-sidebar-link only-moderator active">
+                <a href="../view/finishEvent.html" class="app-sidebar-link only-moderator active" style="display: none;">
                     <i class="fa fa-chart-bar"></i>
                     Finish Event
                 </a>
@@ -52,10 +52,6 @@
                 <a href="../view/myWallet.html" class="app-sidebar-link">
                     <i class="fa fa-wallet"></i>
                     My Wallet
-                </a>
-                <a href="#" class="app-sidebar-link">
-                    <i class="fa fa-sign-out-alt"></i>
-                    Logout
                 </a>
             </nav>
 
