--- a/public/view/myWallet.html
+++ b/public/view/myWallet.html
@@ -32,7 +32,7 @@
                     <i class="fa fa-chart-bar"></i>
                     Evaluate Event
                 </a>
-                <a href="../view/finishEvent.html" class="app-sidebar-link only-moderator">
+                <a href="../view/finishEvent.html" class="app-sidebar-link only-moderator" style="display: none;">
                     <i class="fa fa-chart-bar"></i>
                     Finish Event
                 </a>
@@ -43,10 +43,6 @@
                 <a href="../view/myWallet.html" class="app-sidebar-link active">
                     <i class="fa fa-wallet"></i>
                     My Wallet
-                </a>
-                <a href="#" class="app-sidebar-link">
-                    <i class="fa fa-sign-out-alt"></i>
-                    Logout
                 </a>
             </nav>
 
